...
                    android:paddingBottom="20dp">

                    <TextView
                        android:id="@+id/tvPlaceholderTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Library"
                        android:textColor="@color/app_on_surface"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvPlaceholderBody"
...
