...
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDurationFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:maxLines="1"
                android:minHeight="36dp"
...
